examples/errors/music/unclosed_inline_field.abc
X:1
T:Unclosed Inline Field
K:C
% M013: Missing ]
[M:3/4 CDEF|
